Clean up z-index issue

--- a/inst/components/sidebar.scss
+++ b/inst/components/sidebar.scss
@@ -30,6 +30,7 @@ $bslib-sidebar-transition: grid-template-columns ease-in-out 0.5s !default;
     background-color: var(--bslib-sidebar-bg);
     display: flex;
     flex-direction: column;
+    z-index: -1; // during transition, sidebar appears under main
 
     > .accordion {
       margin: - $bslib-sidebar-padding;
@@ -47,7 +48,6 @@ $bslib-sidebar-transition: grid-template-columns ease-in-out 0.5s !default;
 
   > .main {
     padding: $bslib-sidebar-padding;
-    z-index: 1; // Make sure main content is on top of sidebar during transition
     border-top-right-radius: inherit;
     border-bottom-right-radius: inherit;
     background-color: var(--bslib-sidebar-main-bg);
@@ -57,14 +57,13 @@ $bslib-sidebar-transition: grid-template-columns ease-in-out 0.5s !default;
     grid-row: 1 / 2;
     grid-column: 1 / 2;
     position: absolute;
-    right: -$bslib-sidebar-icon-size;
+    right: - $bslib-sidebar-icon-size;
     bottom: $bslib-sidebar-padding;
     display: inline-flex;
     align-items: center;
     border: $bslib-sidebar-separator;
     border-left: none;
     border-radius: 0 $border-radius $border-radius 0;
-    z-index: $zindex-tooltip;
     padding: 4px 0;
 
     &::after {
